Bug squashing
- Fixed a FF issue
- Ignoring /tmp directory

--- a/assets/css/chronicles.css
+++ b/assets/css/chronicles.css
@@ -248,4 +248,6 @@ body{
 
 .chronicles .channels .prev-next i{
     cursor:pointer;
+    width:15px;
+    display:inline-block;
 }
